--- a/home-health.html
+++ b/home-health.html
@@ -23,8 +23,8 @@
                 <li><a class="lastLink" href="/hospice.html">Hospice</a></li>
                 <li><a href="/contact-us.html" class="btn">Contact Us</a></li>
             </ul>
-            <div id="openMobile">
-                Open
+            <div id="openMobile" style="font-weight: bold;">
+                MENU
             </div>
             <ul class="mobileNav ">
             
