--- a/hospice.html
+++ b/hospice.html
@@ -23,8 +23,8 @@
                 <li><a class="lastLink active" href="/hospice.html">Hospice</a></li>
                 <li><a href="/contact-us.html" class="btn">Contact Us</a></li>
             </ul>
-            <div id="openMobile" style="font-weight: bold;">
-                MENU
+            <div id="openMobile" >
+                <img src="/ennoble-images/openMenu.png" alt="">
             </div>
             <ul class="mobileNav ">
             
